--- a/docs/styles.css
+++ b/docs/styles.css
@@ -447,7 +447,7 @@ a[data-fancybox] img {
 }
 
 #profile .portrait {
-  background-image: url('../img/portrait.jpg');
+  background-image: url('/img/portrait.jpg');
   width: 200px;
   height: 200px;
   margin: 0 auto;
